--- a/DockerFile
+++ b/DockerFile
@@ -1,27 +1,22 @@
-# Use official Python base image
-FROM python:3.10-slim-bullseye
+FROM python:3.11-slim
 
-# Set work directory
-WORKDIR /app
-
-# Install system dependencies
+# Install system dependencies for mysqlclient and others
 RUN apt-get update && apt-get install -y \
+    gcc \
+    default-libmysqlclient-dev \
+    pkg-config \
     build-essential \
-    libglib2.0-0 \
-    libsm6 \
-    libxrender1 \
-    libxext6 \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install Python dependencies
+# Set workdir
+WORKDIR /app
+
+# Copy requirements and install
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the app
+# Copy app source
 COPY . .
 
-# Expose port (default for Streamlit is 8501, Flask is 5000)
-EXPOSE 8501
-
-# Run the app
-CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+# Command to run the app (change as needed)
+CMD ["streamlit", "run", "app.py"]
