--- a/DockerFile
+++ b/DockerFile
@@ -1,22 +1,21 @@
 FROM python:3.11-slim
 
-# Install system dependencies for mysqlclient and others
 RUN apt-get update && apt-get install -y \
     gcc \
     default-libmysqlclient-dev \
     pkg-config \
     build-essential \
-    && rm -rf /var/lib/apt/lists/*
+    git \
+    bzip2 \
+    apt-utils && \
+    rm -rf /var/lib/apt/lists/*
 
-# Set workdir
 WORKDIR /app
 
-# Copy requirements and install
-COPY requirements.txt .
+RUN git clone https://github.com/nikhilvyamsani/MyAttendance.git .
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy app source
-COPY . .
+EXPOSE 8501
 
-# Command to run the app (change as needed)
-CMD ["streamlit", "run", "app.py"]
+CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.headless=true"]
